# apiodactyl

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  diesel.toml  docker-compose.yml  docker-entrypoint.sh  openapi.json
deployment/migrations/2025-08-18-234648_create_wplace/: up.sql
migrations/2025-08-18-234648_create_wplace/: down.sql  up.sql
migrations/2025-08-18-235222_create_reviews/: up.sql
migrations/2025-08-18-235556_create_projects/: up.sql
migrations/2025-08-18-235802_create_games/: up.sql
migrations/2025-08-19-000003_create_books/: up.sql
migrations/2025-08-19-180523_create_api_keys/: up.sql
src/: auth.rs  cli.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: admin.rs  books.rs  games.rs  mod.rs  projects.rs  reviews.rs  wplace.rs
