[package]
name = "apiodactyl"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.12", features = ["postgres", "serde_json"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
