[package]
name = "apiodactyl"
version = "0.1.0"
edition = "2024"

[lib]
name = "libapiodactyl"
path = "src/lib.rs"

[dependencies]
diesel = { version = "2.2.12", features = ["postgres", "serde_json", "r2d2", "chrono"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4"] }
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
async-trait = "0.1.89"
clap = "4.5.45"
rocket_db_pools = { version = "0.2.0", features = ["diesel-async", "diesel_postgres"] }
